@startuml
class edu.hm.cs.katz.swt2.agenda.initialization.DemoData {
    {static} - LOG : Logger
    {static} - LOGIN_BERT : String
    {static} - LOGIN_ERNIE : String
    {static} - LOGIN_FINE : String
    + addData()
}

  


class edu.hm.cs.katz.swt2.agenda.initialization.Initializer {
    ~ adminLogin : String
    ~ adminPassword : String
    {static} - LOG : Logger
    + checkAdminAccount()
}


  edu.hm.cs.katz.swt2.agenda.initialization.DemoData o-- edu.hm.cs.katz.swt2.agenda.service.UserService : anwenderService
  edu.hm.cs.katz.swt2.agenda.initialization.DemoData o-- edu.hm.cs.katz.swt2.agenda.service.TaskService : taskService
  edu.hm.cs.katz.swt2.agenda.initialization.DemoData o-- edu.hm.cs.katz.swt2.agenda.service.TopicService : topicService
  edu.hm.cs.katz.swt2.agenda.initialization.Initializer o-- edu.hm.cs.katz.swt2.agenda.service.UserService : anwenderService

@enduml
